docroot/themes/custom/emulsifymars/components/02-molecules/recommendations-module/_recommendations-module.scss
.recommendations {
  position: relative;
  background-color: clr(subcolor-2);
  padding-bottom: 4rem;

  @include brand-border-overflow;

  .graphic-divider {
    text-align: center;
    margin-bottom: 4rem;

    @include xl {
      margin-bottom: 6rem;
    }
  }

  &__heading {
    padding-top: 2rem;
    &--main-heading {
      text-align: center;
      color: clr(primary);
      text-transform: uppercase;
      line-height: 1.1em;
      font-family: variable(heading-font);

      @include xs {
        font-size: 4rem;
        line-height: 4rem;
      }

      @include medium {
        font-size: 5.6rem;
        line-height: 5.6rem;
      }

      @include large {
        font-size: 6.4rem;
        line-height: 6.4rem;
      }
    }
  }

  .horizontal-img__inner {
    margin: 0 auto 3rem auto;

    @include xl {
      margin: 0 auto 4rem auto;
    }
  }

  // overrides for the default styles of swiper - container, progress bar and buttons of the carousel
  .recommendations-swiper-container {
    width: 100%;
    height: 610px;
  }

  .is-in-viewport {
    img {
      transition: cubic-bezier(0.75, 0, 0.25, 0), 0.8s;
      transform: scale(1.1);
    }
    .product-card__img-hover img {
      transform: translate(-50%, 0) scale(1.1);
    }
  }

  .no-carousel {
    @include xl {
      display: flex;
      justify-content: center;
      margin-left: -2%;
    }
  }

  .swiper-wrapper{
    @media (max-width: 600px) {
      margin-left: -8%;
    }
  }

  // increasing specificity to avoid using !important
  .recommendations-swiper-container.swiper-container-horizontal
    > .swiper-scrollbar {
    height: 16px;
    transform: scale(0.5);

    & .swiper-scrollbar-drag {
      background: clr(secondary);
    }
  }

  .swiper-slide {
    width: 318px;
  }

  .hide-arrow {
    display: none;
  }

  .recipe-card {
    .recipe-card__media {
      width: 318px;
    }
    .recipe-card-heading__link {
      min-width: 0;
    }
  }

  .recipe-card,
  .article-card,
  .product-card,
  .recommendations-card {
    box-sizing: border-box;
    margin-top: 3.5rem;
    width: 318px;
    height: 520px;
  }

  .article-card {
    &__content {
      display: block;
    }

    .article-card-paragraph {
      flex-grow: 0;
    }

    .default-link {
      margin-top: 7.45rem;
    }
  }

  .swiper-button-prev, .swiper-button-next  {
    background-color: clr(text-inverse);
    border-radius: 50%;
    width: 7rem;
    height: 7rem;

    @media (max-width: 768px) {
      width: 6rem;
      height: 6rem;
    }

    @media (max-width: 375px) {
      width: 5.5rem;
      height: 5.5rem;
    }

    &.swiper-button-disabled {
      opacity: 0;
    }

    &::after {
      color: clr(secondary);
      font-size: 2.5rem;
    }
  }
}

